Installed sticky sidebar

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "sass-math": "^1.0.0",
+    "sticky-sidebar": "^3.3.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
